@@ -1,9 +1,21 @@
 from batou import DeploymentError, output
-from batou.utils import cmd, CmdExecutionError
+from batou.utils import cmd as cmd_, CmdExecutionError
 import execnet
 import os
 import subprocess
 import tempfile
+
+
+def cmd(c, *args, **kw):
+    return cmd_('LANG=C LC_ALL=C LANGUAGE=C {}'.format(c), *args, **kw)
+
+
+def find_line_with(prefix, output):
+    output = output.split('\n')
+    for line in output:
+        line = line.strip()
+        if line.startswith(prefix):
+            return line.replace(prefix, '', 1).strip()
 
 
 class Repository(object):
@@ -30,6 +42,10 @@ class Repository(object):
             return MercurialBundleRepository(environment)
         elif environment.update_method == 'hg-pull':
             return MercurialPullRepository(environment)
+        elif environment.update_method == 'git-bundle':
+            return GitBundleRepository(environment)
+        elif environment.update_method == 'git-pull':
+            return GitPullRepository(environment)
         raise ValueError('Could not find method to transfer the repository.')
 
     def verify(self):
@@ -77,6 +93,7 @@ class MercurialRepository(Repository):
     def __init__(self, environment):
         super(MercurialRepository, self).__init__(environment)
         self.root = subprocess.check_output(['hg', 'root']).strip()
+        self.branch = environment.branch or 'default'
         self.subdir = os.path.relpath(
             self.environment.base_dir, self.root)
 
@@ -92,11 +109,8 @@ class MercurialRepository(Repository):
         return self._upstream
 
     def update(self, host):
-        env = self.environment
-
         self._ship(host)
-
-        remote_id = host.rpc.update_working_copy(env.branch)
+        remote_id = host.rpc.hg_update_working_copy(self.branch)
         local_id, _ = cmd('hg id -i')
         if self.environment.deployment.dirty:
             local_id = local_id.replace('+', '')
@@ -145,13 +159,13 @@ Please push first.
 class MercurialPullRepository(MercurialRepository):
 
     def _ship(self, host):
-        host.rpc.pull_code(upstream=self.upstream)
+        host.rpc.hg_pull_code(upstream=self.upstream)
 
 
 class MercurialBundleRepository(MercurialRepository):
 
     def _ship(self, host):
-        heads = host.rpc.current_heads()
+        heads = host.rpc.hg_current_heads()
         if not heads:
             raise ValueError("Remote repository did not find any heads. "
                              "Can not continue creating a bundle.")
@@ -172,4 +186,112 @@ class MercurialBundleRepository(MercurialRepository):
         os.unlink(bundle_file)
         output.annotate(
             'Unbundling changes', debug=True)
-        host.rpc.unbundle_code()
+        host.rpc.hg_unbundle_code()
+
+
+class GitRepository(Repository):
+
+    root = None
+    _upstream = None
+    remote = 'origin'
+
+    def __init__(self, environment):
+        super(GitRepository, self).__init__(environment)
+        self.branch = environment.branch or 'master'
+        self.root = subprocess.check_output(
+            ['git', 'rev-parse', '--show-toplevel']).strip()
+        self.subdir = os.path.relpath(
+            self.environment.base_dir, self.root)
+
+    @property
+    def upstream(self):
+        if self.environment.repository_url is not None:
+            self._upstream = self.environment.repository_url
+        elif self._upstream is None:
+            result = cmd('git remote show -n {}'.format(self.remote))[0]
+            self._upstream = find_line_with('Fetch URL:', result)
+        return self._upstream
+
+    def update(self, host):
+        self._ship(host)
+        remote_id = host.rpc.git_update_working_copy(self.branch)
+        # This can theoretically fail if we have a fresh repository, but
+        # that doesn't make sense at this point anyway.
+        local_id, _ = cmd('git rev-parse HEAD')
+        local_id = local_id.strip()
+        if remote_id != local_id:
+            raise RuntimeError(
+                'Working copy parents differ. Local: {} Remote: {}'.format(
+                    local_id, remote_id))
+
+    def verify(self):
+        # Safety belt that we're acting on a clean repository.
+        if self.environment.deployment.dirty:
+            output.annotate(
+                "You are running a dirty deployment. This can cause "
+                "inconsistencies -- continuing on your own risk!", red=True)
+            return
+
+        try:
+            status, _ = cmd('git status --porcelain')
+        except CmdExecutionError:
+            output.error('Unable to check repository status. '
+                         'Is there a Git repository here?')
+            raise
+        else:
+            status = status.strip()
+            if status.strip():
+                output.error("Your repository has uncommitted changes.")
+                output.annotate("""\
+I am refusing to deploy in this situation as the results will be unpredictable.
+Please commit and push first.
+""", red=True)
+                output.annotate(status, red=True)
+                raise DeploymentError()
+        outgoing, _ = cmd(
+            'git log {remote}/{branch}..{branch} --pretty=oneline'.format(
+                remote=self.remote, branch=self.branch),
+            acceptable_returncodes=[0, 128])
+        if outgoing.strip():
+            output.error("""\
+Your repository has outgoing changes.
+
+I am refusing to deploy in this situation as the results will be unpredictable.
+Please push first.
+""")
+            raise DeploymentError()
+
+
+class GitPullRepository(GitRepository):
+
+    def _ship(self, host):
+        host.rpc.git_pull_code(upstream=self.upstream)
+
+
+class GitBundleRepository(GitRepository):
+
+    def _ship(self, host):
+        head = host.rpc.git_current_head(self.branch)
+        if head is None:
+            bundle_range = self.branch
+        else:
+            bundle_range = '{head}..{branch}'.format(
+                head=head, branch=self.branch)
+        fd, bundle_file = tempfile.mkstemp()
+        os.close(fd)
+        out, err = cmd('git bundle create {file} {range}'.format(
+            file=bundle_file, range=bundle_range),
+            acceptable_returncodes=[0, 128])
+        if 'create empty bundle' in err:
+            return
+        change_size = os.stat(bundle_file).st_size
+        output.annotate(
+            'Sending {} bytes of changes'.format(change_size), debug=True)
+        rsync = execnet.RSync(bundle_file, verbose=False)
+        rsync.add_target(host.gateway,
+                         host.remote_repository + '/batou-bundle.git')
+        rsync.send()
+        os.unlink(bundle_file)
+        output.annotate(
+            'Unbundling changes', debug=True)
+        host.rpc.git_unbundle_code()
